--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@angular/ssr": "^19.2.8",
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@primeng/themes": "^19.1.2",
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
+    "primeng": "^19.1.2",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
